--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -103,10 +103,17 @@ $primaryColor: #0072ff;
   }
 
   table {
+    display: table;
     width: 100%;
     .el-tag {
       display: unset;
       margin-left: 4px;
+    }
+  }
+
+  .el-table {
+    table {
+      display: block;
     }
   }
 
