feat(components): :sparkles: plusDescriptions add form function support
建议添加一个 FormDesc 描述表单 #210

--- a/packages/theme-chalk/src/descriptions.scss
+++ b/packages/theme-chalk/src/descriptions.scss
@@ -1,4 +1,6 @@
+@use 'mixins/config' as *;
 @use 'mixins/mixins' as *;
+@use 'mixins/function' as *;
 
 @include b(description) {
   @include e(name) {
@@ -7,5 +9,33 @@
   }
   @include e(label) {
     min-width: 80px;
+
+    &.is-required {
+      &::before {
+        content: '*';
+        color: getCssVar('color-danger');
+        margin-right: 4px;
+      }
+    }
+  }
+
+  &.no-border {
+    .#{$el-namespace + -descriptions__body} {
+      .#{$el-namespace + -descriptions__table} {
+        &.is-bordered {
+          .#{$el-namespace + -descriptions__cell} {
+            border: 0;
+          }
+        }
+      }
+
+      .#{$el-namespace + -descriptions__label} {
+        &.#{$el-namespace + -descriptions__cell} {
+          &.is-bordered-label {
+            background-color: getCssVar('fill-color-blank');
+          }
+        }
+      }
+    }
   }
 }
