限制layout的main区域的宽度,使内容在屏幕内

--- a/packages/theme-chalk/src/layout.scss
+++ b/packages/theme-chalk/src/layout.scss
@@ -20,6 +20,7 @@ $layout-height: calc(100vh - var(--plus-header-height));
   .#{$plus-namespace + -layout-main} {
     height: $layout-height;
     flex: 1;
+    max-width: calc(100vw - var(--plus-sidebar-width, 200px));
   }
 
   .#{$plus-namespace + -layout-content} {
